# programming-math

./: .gitignore  LICENSE  format_code.py  internal-docs.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml  publish.yml  test.yml
src/: scratchpad.py
src/algebra/: __init__.py  __main__.py  algebra_utils.py
src/calculus/: __init__.py  __main__.py  limit_utils.py  limits.py
src/geometry/: __init__.py  geometry_utils.py
tests/algebra/: test_algebra_cli.py  test_algebra_utils.py  test_cli.py
tests/calculus/: test_limit_cli.py  test_limits.py
tests/geometry/: test_geometry_utils.py
